--- a/style.css
+++ b/style.css
@@ -55,6 +55,15 @@ a.skip-main:focus, a.skip-main:active {
     width: 100%;
   } 
   
+  .col-container {
+    display: table; /* Make the container element behave like a table */
+    width: 100%; /* Set full-width to expand the whole page */
+}
+
+.col {
+    display: table-cell; /* Make elements inside the container behave like table cells */
+}
+
   /*
   html {
     font-size: 22px;
