--- a/style.css
+++ b/style.css
@@ -1,174 +1,201 @@
 /* || General setup */
 
-  html, body {
-    margin:20px;
-    padding: 0;
+html,
+body {
+    margin: 0px;
+    padding: 20;
     font-size: 20px;
     background-color: #ffffff;
-    
-  }
-  a{
-    margin: 20px;
-  } 
-
-  a.skip-main {
-    left:-999px;
-    position:absolute;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
-    z-index:-999;
 }
-a.skip-main:focus, a.skip-main:active {
+
+a {
+    margin: 20px;
+}
+
+a.skip-main {
+    left: -999px;
+    position: absolute;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    z-index: -999;
+}
+
+a.skip-main:focus,
+a.skip-main:active {
     color: #fff;
-    background-color:#000;
+    background-color: #000;
     left: auto;
     top: auto;
     width: 30%;
     height: auto;
-    overflow:auto;
+    overflow: auto;
     margin: 10px 35%;
-    padding:5px;
+    padding: 5px;
     border-radius: 15px;
-    border:4px solid yellow;
-    text-align:center;
-    font-size:1.2em;
-    z-index:999;
+    border: 4px solid yellow;
+    text-align: center;
+    font-size: 1.2em;
+    z-index: 999;
 }
 
-  h1{
+h1 {
     text-align: center;
-  }
+}
 
-  h2{
+h2 {
     text-align: center;
+}
 
-  }
-
-  canvas{
-    
-		-moz-user-select: none;
-		-webkit-user-select: none;
+canvas {
+    -moz-user-select: none;
+    -webkit-user-select: none;
     -ms-user-select: none;
     align-content: center;
     width: 100%;
-  } 
-  
-  .col-container {
-    display: table; /* Make the container element behave like a table */
-    width: 100%; /* Set full-width to expand the whole page */
+}
+
+.col-container {
+    display: table;
+    /* Make the container element behave like a table */
+    width: 100%;
+    /* Set full-width to expand the whole page */
 }
 
 .col {
-    display: table-cell; /* Make elements inside the container behave like table cells */
+    display: table-cell;
+    /* Make elements inside the container behave like table cells */
 }
 
 table {
-  border-collapse: collapse;
+    border-collapse: collapse;
 }
 
-table, td, th {
-  border: 1px solid black;
-  text-align: center;
+table,
+td,
+th {
+    border: 1px solid black;
+    text-align: center;
 }
 
-ul.square {
-  list-style-type: square;
-}
-
-li.no-dot{
+ul {
     list-style-type: none;
-    font-size: medium;
+    font-size: 50px;
 }
 
-input.large/*checkbox class name*/ {
+li.no-dot {
+    list-style-type: none;
+    font-size: 30px;
+    margin-left: 30px;
+}
+
+input.large
+/*checkbox class name*/
+
+{
     /* transform: scale(2); */
     font-size: medium;
-  }
+}
 
 
 /* from https://webdesign.tutsplus.com/tutorials/how-to-make-custom-accessible-checkboxes-and-radio-buttons--cms-32074 */
+
 *,
 *::before,
 *::after {
     box-sizing: inherit;
 }
 
+
 /*style wrapper to give some space*/
+
 .wrapper {
     position: relative;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
+
 
 /*style label to give some more space*/
+
 .wrapper label {
-  display: block;
-  padding: 12px 0 12px 48px;
+    display: block;
+    padding: 12px 0 12px 48px;
 }
+
 
 /*style and hide original checkbox*/
+
 .wrapper input {
-  height: 40px;
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  width: 40px;
+    height: 40px;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 40px;
 }
+
 
 /*position new box*/
-.wrapper input + label::before {
-  border: 2px solid;
-  content: "";
-  height: 40px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 40px;
+
+.wrapper input+label::before {
+    border: 2px solid;
+    content: "";
+    height: 40px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 40px;
 }
+
 
 /*create check symbol with pseudo element*/
-.wrapper input + label::after {
-  content: "";
-  border: 4px solid;
-  border-left: 0;
-  border-top: 0;
-  height: 20px;
-  left: 14px;
-  opacity: 0;
-  position: absolute;
-  top: 6px;
-  transform: rotate(45deg);
-  transition: opacity 0.2s ease-in-out;
-  width: 12px;
+
+.wrapper input+label::after {
+    content: "";
+    border: 4px solid;
+    border-left: 0;
+    border-top: 0;
+    height: 20px;
+    left: 14px;
+    opacity: 0;
+    position: absolute;
+    top: 6px;
+    transform: rotate(45deg);
+    transition: opacity 0.2s ease-in-out;
+    width: 12px;
 }
+
 
 /*reveal check for 'on' state*/
-.wrapper input:checked + label::after {
-  opacity: 1;
+
+.wrapper input:checked+label::after {
+    opacity: 1;
 }
 
-.wrapper input:focus + label::before {
-    box-shadow: 0 0 0 3px #ffbf47;  
-  outline: 3px solid transparent;
+.wrapper input:focus+label::before {
+    box-shadow: 0 0 0 3px #ffbf47;
+    outline: 3px solid transparent;
 }
-
 
 
 /*** BEN :: little helpers ***/
+
 .spacer {
     margin: auto auto;
 }
+
 #country_select {
     width: 15%;
     margin-bottom: 1rem;
+    margin-right: 10px;
 }
+
 #son_controls_legend {
     /*maybe, maybe not*/
 }
+
 iframe {
     display: block;
 }
-
